loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:7: error: ';' expected but 'while' found.
  }while (crossing()==false) 
   ^Poucet2:15: error: 'while' expected but '}' found.
} 
^